refactor(services): add @Service annotation, use constructor injection, clean up stream returns